WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300113
Nesting selector can't be inlined if there is a tag selector in both compounds
https://bugs.webkit.org/show_bug.cgi?id=300113
Summary
Nesting selector can't be inlined if there is a tag selector in both compounds
Antti Koivisto
Reported
2025-10-03 09:46:14 PDT
CSS only allows one tag per compound.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-03 10:02:26 PDT
<
rdar://problem/161903063
>
Antti Koivisto
Comment 2
2025-10-03 10:08:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51761
EWS
Comment 3
2025-10-06 23:17:23 PDT
Committed
301114@main
(18f19fda8506): <
https://commits.webkit.org/301114@main
> Reviewed commits have been landed. Closing PR #51761 and removing active labels.
Antti Koivisto
Comment 4
2025-10-10 21:43:39 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/55369
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug