Nesting selector can't be inlined if there is a tag selector in both compounds https://bugs.webkit.org/show_bug.cgi?id=300113 rdar://161903063

Reviewed by Matthieu Dubet.

* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nesting-basic-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nesting-basic-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nesting-basic.html:
* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParser::resolveNestingParent):

Check if both the compound of the nesting selector and the last compound of the nesting parent
have tag selectors. We can't inline if they do because CSS syntax only allows one tag per compound
and the codebase has assumptions around that.

Canonical link: https://commits.webkit.org/301114@main